# disruptor

./: .actrc  .envrc  .gitignore  DEVELOPMENT-CI.md  README.md  flake.nix  nix-shell.sh
.github/workflows/: ci-bzl-projects.yaml  ci-bzl4.yaml  ci-example-project.yaml  ci-nix.yaml  ci.yaml
docs/adrs/: adr-000-using-adrs.md  adr-001-dev-model.md  adr-002-deps-mngmt.md  adr-003-ci-approach.md  adr-003-project-management.md  adr-004-nix-flakes.md  adr-004-project-management.md  adr-005-project-management.md  adr-NNN-desc.md.template
example_project_bzl_4/: .bazelignore  .bazelrc  BUILD.bazel  WORKSPACE  shell.nix
example_project_bzl_4/hello_world/: BUILD.bazel
example_project_bzl_4/nix_packages/: BUILD.bazel
example_project_bzl_4/readline_example_c/: BUILD.bazel
example_project_bzl_4/server_c/: BUILD.bazel  server.c
example_project_bzl_4/x11_app/: BUILD.bazel  main.cpp
nix/: BUILD.bazel  WORKSPACE  default.nix  gen-bzl-nix-file-deps.sh
nix/bazelHelpers/: default.nix
nix/bzl/: defs.bzl  deps.bzl  deps_init.bzl  pkgs.bzl
nix/libuv/: default.nix
nix/ncurses/: default.nix
nix/readTree/: default.nix
nix/readline/: default.nix
nix/xorg/libX11/: default.nix
nix/xorg/xorgproto/: default.nix
nix/xz/: default.nix
projects/bzl4/: .bazelrc  BUILD.bazel  WORKSPACE  shell.nix
projects/bzl4/hello_world/: BUILD.bazel  main.cpp
projects/bzl4/readline_example_c/: BUILD.bazel  readline.c
projects/bzl4/x11_app/: BUILD.bazel  main.cpp
projects/bzl5_bzlmod/: .bazelignore  .bazelrc  MODULE.bazel  README.md  shell.nix
projects/bzl5_bzlmod/java_cmd/: BUILD.bazel  JavaCmd.java
projects/bzl5_bzlmod/modules/common_module/: MODULE.bazel
projects/bzl5_bzlmod/modules/common_module/ascii_banner/: AsciiBanner.java  BUILD.bazel
projects/bzl7/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  shell.nix
projects/bzl7/boost_hello_world/: hello.cpp  version.cpp
projects/bzl7/cpp/: README.md
projects/bzl7/cpp/boost_hello_world/: BUILD.bazel  thread.cpp  thread.hpp  version.hpp
projects/bzl7/cpp/hello_world/: BUILD.bazel
projects/bzl7/go/: README.md
projects/bzl7/go/gazelle/: go.mod  main.go
projects/bzl7/go/gazelle/foo/: foo.go
projects/bzl7/go/grpc/: go.mod
projects/bzl7/go/grpc/client/: BUILD.bazel  main.go
projects/bzl7/go/grpc/proto/: BUILD.bazel  echo.proto
projects/bzl7/go/grpc/server/: BUILD.bazel  main.go
projects/bzl7/python/: README.md
projects/bzl7/python/hello_world/: BUILD.bazel  main.py
projects/bzl7/python/pip/: BUILD.bazel  README.md  main.py  requirements_lock.txt
projects/bzl7/toolchains/: defs.bzl
scripts/: nix-conf-diff.nix  nix.conf  nixpkgs-latest.nix  nixpkgs.nix  push.sh  shell.nix  shell.sh
