""" Hello world app """

load("@rules_cc//cc:defs.bzl", "cc_binary")

# Before running, set $DISPLAY and do xhost +
cc_binary(
    name = "main",
    srcs = glob([
      "*.cpp"
    ]),
    deps = [
      "@distruptor_nix//bzl/packages:xorg.xorgproto",
      "@distruptor_nix//bzl/packages:xorg.libX11",
    ]
)
