""" Hello world app """

load("@rules_cc//cc:defs.bzl", "cc_binary")

# Before running, set $DISPLAY and do xhost +
cc_binary(
    name = "main",
    srcs = glob([
      "*.cpp"
    ]),
    deps = [
      "@xorg.xorgproto.headers//:all",
      "@xorg.libX11.headers//:all",
      "@xorg.libX11.lib//:all",
    ]
)
