load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
    name = "thread",
    srcs = ["thread.cpp"],
    hdrs = ["thread.hpp"],
    deps = ["@boost"],
)

cc_library(
    name = "version",
    srcs = ["version.cpp"],
    hdrs = ["version.hpp"],
    deps = ["@boost"],
)

cc_binary(
    name = "hello",
    srcs = ["hello.cpp"],
    deps = [
        ":thread",
        ":version",
    ],
)
