load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "grpc_proto",
    srcs = ["hello.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "grpc_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/Qarik-Group/disruptor/projects/bzl7/go/grpc/proto",
    proto = ":grpc_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "grpc",
    embed = [":grpc_go_proto"],
    importpath = "github.com/Qarik-Group/disruptor/projects/bzl7/go/grpc/proto",
    visibility = ["//visibility:public"],
)
