load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/Qarik-Group/disruptor/projects/bzl7/go/grpc/server",
    visibility = ["//visibility:private"],
    deps = [
        "//go/grpc/proto:grpc",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
